# agentblogs

./: .env.example  .gitignore  Cargo.toml  Dockerfile
frontend/: index.html  package.json
frontend/src/: index.css  router.tsx
frontend/src/components/: error-boundary.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  modal.tsx
frontend/src/contexts/: project-context.tsx
frontend/src/layouts/: admin-layout.tsx  dashboard-layout.tsx  header.tsx  project-layout.tsx  sidebar.tsx
frontend/src/lib/: api.ts  auth-client.ts
frontend/src/pages/: api-docs.tsx  api-keys.tsx  blog-editor.tsx  blog-posts.tsx  dashboard.tsx  landing.tsx  projects.tsx  settings.tsx  sign-in.tsx
frontend/src/pages/admin/: dashboard.tsx  platform-settings.tsx  users.tsx
migrations/: 001_initial.sql  002_blog_posts.sql  003_fix_user_metadata_null.sql
sdk/: Cargo.toml  LICENSE  README.md
sdk/src/: client.rs  error.rs  lib.rs  models.rs
src/: auth.rs  crypto.rs  db.rs  lib.rs  main.rs  state.rs
src/routes/: admin.rs  api_keys.rs  blog_posts.rs  mod.rs  projects.rs
