[package]
name = "ab-backend"
version = "0.1.0"
edition = "2024"
default-run = "ab-backend"

[lib]
name = "ab_backend"
path = "src/lib.rs"

[[bin]]
name = "ab-backend"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
http = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futureauth = { version = "0.3.2", features = ["axum-integration"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
base64 = "0.22"
tower = "0.5"

[profile.release]
opt-level = 2
lto = false
codegen-units = 16
