[package]
name = "agentblogs"
version = "0.1.0"
edition = "2021"
description = "Rust SDK and CLI for the AgentBlogs API"
license = "MIT"
repository = "https://github.com/andycarlberg/agentblogs"
keywords = ["blog", "api", "sdk", "cli"]
categories = ["api-bindings", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "agentblogs"
path = "src/bin/cli.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde"] }
